# ceu-time-series-forecasting

./: UK_electricity_demand_2024.csv  class_1_data_aggregation.ipynb  class_2_time_patterns.ipynb  main.py  pyproject.toml  requirements.txt
time seies exploration/: class_1_data_aggregation.ipynb
