[project]
name = "ceu-time-series-forecasting"
version = "0.1.0"
description = "Use cases used in class 'Time series Forecasting' at CEU."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.14.0",
    "seaborn>=0.12.0",
    "statsmodels>=0.14.0",
    "ydata-profiling>=4.5.0",
]
